# ros-stuff

./: README.md
apps/spinner_robot/robot_ws/src/spinner_robot/: CMakeLists.txt  package.xml  setup.py
apps/spinner_robot/robot_ws/src/spinner_robot/config/: aws_cloudwatch_logs_config.yml
apps/spinner_robot/robot_ws/src/spinner_robot/deploymentScripts/: post_launch_script.sh  pre_launch_script.sh
apps/spinner_robot/robot_ws/src/spinner_robot/launch/: aws_cloudwatch_logger.launch  main.launch
apps/spinner_robot/robot_ws/src/spinner_robot/nodes/: spin
apps/spinner_robot/robot_ws/src/spinner_robot/src/jetbot/: __init__.py
cross-compilation/arm64/: Dockerfile.bionic  README.md  bionic-sources-arm64.yaml  build_image_arm64.bash
cross-compilation/armhf/: README.md
infrastructure/robomaker/cert_generator/: cfnresponse.py  index.py
infrastructure/robomaker/templates/: robomaker-cert_generator.yml  robomaker-common.yml  robomaker-fleet.yml  robomaker-robot.yml
